k8s/grafana/service.yaml
# grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
